--- a/Task_05/css/main.css
+++ b/Task_05/css/main.css
@@ -1,115 +1,160 @@
-* {
-  box-sizing: border-box;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
 }
 
 body {
-  background-color: #535353;
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+#button05, #button04, #button03, #button02, #button01 {
+  background-size: 170px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+body {
+  background-color: #5f5f5f;
+  font-family: sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .content-frame {
   max-width: 1024px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 15px;
 }
 
-.text-box {
-  margin: 0 auto;
+.heading-box {
+  padding: 20px 0;
   text-align: center;
-  max-width: 700px;
-  border-top: 1px solid #ffffff;
-  border-bottom: 1px solid #ffffff;
-  padding: 0 20px 10px 20px;
 }
 
 .heading {
-  text-align: center;
-  color: #ffffff;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: none;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ff7300;
+}
+
+.text-box {
+  margin: 20px auto;
+  padding: 10px 0;
+  text-align: justify;
+  max-width: 500px;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
 }
 
 .text {
-  color: #acacac;
-}
-
-.button {
-  padding: 10px 25px;
-  background-color: #ff9900;
-  color: #353535;
-  border-radius: 10px;
-  border: none;
-  outline: none;
-  transition: all 0.3s ease;
-  font-weight: 900;
-}
-
-.button:hover {
-  background-color: #eeff00;
-  cursor: pointer;
-}
-
-.vote-box {
-  margin-top: 50px;
-  display: flex;
-  justify-content: center;
-  border-top: 1px solid #ffffff;
-  border-bottom: 1px solid #ffffff;
-  padding: 30px;
-}
-
-.vote-button {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  border: none;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 330%;
-  cursor: pointer;
-  outline: none;
-  transition: all 0.3s ease;
-}
-
-.vote-button:not(:last-child) {
-  margin-right: 25px;
-}
-
-.vote-button:hover {
-  opacity: 0.5;
-}
-
-#vote-button1 {
-  background-image: url(../img/feedback-05.png);
-}
-
-#vote-button2 {
-  background-image: url(../img/feedback-04.png);
-}
-
-#vote-button3 {
-  background-image: url(../img/feedback-03.png);
-}
-
-#vote-button4 {
-  background-image: url(../img/feedback-02.png);
-}
-
-#vote-button5 {
-  background-image: url(../img/feedback-01.png);
-}
-
-.counter-box {
-  display: flex;
-  justify-content: center;
-  border-bottom: 1px solid #ffffff;
-  padding: 10px;
-}
-
-.counter {
-  padding: 0 20px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  letter-spacing: none;
+  text-transform: normal;
+  text-decoration: none;
   color: #ffffff;
 }
 
-.counter:not(:last-child) {
-  margin-right: 35px;
+.poll-items {
+  display: flex;
+  justify-content: center;
+  margin-top: 35px;
+}
+
+.poll__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.button {
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+.button:hover {
+  opacity: 0.5;
+}
+
+#button01 {
+  background-image: url(../img/feedback-01.png);
+}
+
+#button02 {
+  background-image: url(../img/feedback-02.png);
+}
+
+#button03 {
+  background-image: url(../img/feedback-03.png);
+}
+
+#button04 {
+  background-image: url(../img/feedback-04.png);
+}
+
+#button05 {
+  background-image: url(../img/feedback-05.png);
+}
+
+.poll__counter-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  min-height: 30px;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  color: #ff7300;
 }
 
 /*# sourceMappingURL=main.css.map */
