--- a/Task_05/scss/main.scss
+++ b/Task_05/scss/main.scss
@@ -1,112 +1,104 @@
-* {
-    box-sizing: border-box;
+@import 'reset';
+@import 'variables';
+@import 'mixins';
+@import 'templates';
+
+// GENERAL
+body {
+    background-color: #5f5f5f;
+    font-family: sans-serif;
 }
 
-body {
-    background-color: #535353;
+* {
+    box-sizing: border-box;
 }
 
 .content-frame {
     max-width: 1024px;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 0 15px;
 }
 
-.text-box {
-    margin: 0 auto;
+// INTRODUCTION
+.heading-box {
+    padding: 20px 0;
     text-align: center;
-    max-width: 700px;
-    border-top: 1px solid #ffffff;
-    border-bottom: 1px solid #ffffff;
-    padding: 0 20px 10px 20px;
 }
 
 .heading {
-    text-align: center;
-    color: #ffffff;
+    @include text-style(700, 40px, 40px, none, uppercase, none, $color-03);
+}
+
+.text-box {
+    margin: 20px auto;
+    padding: 10px 0;
+    text-align: justify;
+    max-width: 500px;
+    border-top: 1px solid $color-02;
+    border-bottom: 1px solid $color-02;
 }
 
 .text {
-    color: #acacac;
+    @include text-style(400, 15px, 20px, none, normal, none, $color-02);
+}
+
+// POLL
+.poll-items {
+    display: flex;
+    justify-content: center;
+    margin-top: 35px;
+}
+
+.poll__item:not(:last-child) {
+    margin-right: 20px;
 }
 
 .button {
-    padding: 10px 25px;
-    background-color: #ff9900;
-    color: #353535;
-    border-radius: 10px;
+    width: 50px;
+    height: 50px;
     border: none;
+    border-radius: 50%;
     outline: none;
-    transition: all 0.3s ease;
-    font-weight: 900;
+    transition: all 0.2s ease;
+    cursor: pointer;
 }
 
 .button:hover {
-    background-color: #eeff00;
-    cursor: pointer;
-}
-
-.vote-box {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    border-top: 1px solid #ffffff;
-    border-bottom: 1px solid #ffffff;
-    padding: 30px;
-}
-
-.vote-button {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    border: none;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 330%;
-    cursor: pointer;
-    outline: none;
-    transition: all 0.3s ease;
-}
-
-.vote-button:not(:last-child) {
-    margin-right: 25px;
-}
-
-.vote-button:hover {
     opacity: 0.5;
 }
 
-#vote-button1 {
-    background-image: url(../img/feedback-05.png);
-}
-
-#vote-button2 {
-    background-image: url(../img/feedback-04.png);
-}
-
-#vote-button3 {
-    background-image: url(../img/feedback-03.png);
-}
-
-#vote-button4 {
-    background-image: url(../img/feedback-02.png);
-}
-
-#vote-button5 {
+#button01 {
     background-image: url(../img/feedback-01.png);
+    @extend %button-background;
 }
 
-.counter-box {
+#button02 {
+    background-image: url(../img/feedback-02.png);
+    @extend %button-background;
+}
+
+#button03 {
+    background-image: url(../img/feedback-03.png);
+    @extend %button-background;
+}
+
+#button04 {
+    background-image: url(../img/feedback-04.png);
+    @extend %button-background;
+}
+
+#button05 {
+    background-image: url(../img/feedback-05.png);
+    @extend %button-background;
+}
+
+.poll__counter-box {
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid #ffffff;
-    padding: 10px;
-}
-
-.counter {
-    padding: 0 20px;
-    color: #ffffff;
-}
-.counter:not(:last-child) {
-    margin-right: 35px;
+    align-items: center;
+    margin-top: 10px;
+    min-height: 30px;
+    border-top: 1px solid $color-02;
+    border-bottom: 1px solid $color-02;
+    color: $color-03;
 }
